Refactor FMCCommand and PortalsMenu classes